--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     display: flex;
     justify-content: start;
     align-items: center;
+
+    background-image: url("assets/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .proyecto{
