--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "Arsenal", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
+}
 
 
 #presentacion {
@@ -17,33 +17,38 @@ body {
     background-position: center;
 }
 
-.proyecto{
+.proyecto {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-#proyecto-1{
+#proyecto-1 {
     background-image: url('assets/clon-google.png')
 }
 
-#proyecto-2{
+#proyecto-2 {
     background-image: url('assets/enha-page.png')
 }
 
 
-#proyecto-3{
+#proyecto-3 {
     background-image: url('assets/bellabeat.png')
 }
 
-.text-shadow-1{
+.text-shadow-1 {
     text-shadow: -2px 0px 6px rgba(0, 0, 0, .90);
 }
 
 
 
-.text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
-.text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
+.text-shadow-2 {
+    text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25);
+}
+
+.text-shadow-3 {
+    text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25);
+}
 
 
 .navbar {
@@ -64,11 +69,14 @@ body {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-
-.icon {
-    color: #3d7d97 ;
 }
 
 
+.icon {
+    color: #3d7d97;
+}
+
+.correo {
+    color: #c1c1c1;
+    text-decoration: none;
+}
